--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,22 @@
 # Python version = 3.10.*
 
 # Data manipulation
-numpy==1.21.5
-pandas==1.3.5
+numpy
+pandas
 
 # SQL connections
-pyodbc==4.0.35
-sqlalchemy==1.4.46
+pyodbc
+sqlalchemy
 
 # Excel output
 #openpyxl==3.0.9
 
 # Testing
-pytest==6.2.5
-pytest-html==3.1.1
+pytest
+pytest-html
 
 # Dependencies of the above packages
 #ipykernel==6.9.0
 #nbformat==5.1.3
-toml==0.10.2
+toml
 #pathlib2==2.3.6
